<resources>
    <string name="app_name">Zero to Hero</string>
    <string name="tab_workouts">Workouts</string>
    <string name="tab_exercises">Exercises</string>
    <string name="workout_details">Workout Details</string>
    <string name="new_workout">New Workout</string>
    <string name="exercise">exercise</string>
    <string name="exercises">exercises</string>
    <string name="exeption_workout_name">You must enter a workout name</string>
    <string name="exeption_exercise_name">You must enter a exercise name</string>
    <string name="exeption_exercise_weight">You must enter a exercise weight</string>
    <string name="exeption_exercise_sets">You must enter the number of sets</string>
    <string name="exeption_exercise_reps">You must enter the number of repetitions</string>
    <string name="exeption_selected_exercises">You must add at least one exercise</string>
    <string name="edit_workout">Edit Workout</string>
    <string name="edit_exercise">Edit Exercise</string>
    <string name="new_exercise">New Exercise</string>
    <string name="name">Name</string>
    <string name="weight">Weight</string>
    <string name="sets">Sets</string>
    <string name="reps">Reps</string>
    <string name="exercise_details">Exercise Details</string>
    <string name="hint_exercise_name">Bench press</string>
    <string name="hint_weight">10KG</string>
    <string name="hint_notes">Add some additional info here</string>
    <string name="workout">Workout</string>
    <string name="hint_workout_name">What\'s the name of the workout?</string>
    <string name="no_exercises_found">No exercises found</string>
    <string name="no_workouts_found">No workouts found</string>
    <string name="app_full_name">Zero to Hero - Workout Tracker</string>
    <string name="app_description">Zero to Hero is a minimalist workout and exercise management app that helps you track the progress of your workouts and lose your beer belly.</string>
</resources>
