<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/appbar" />

        <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical"
                    app:cardBackgroundColor="@android:color/white"
                    app:cardCornerRadius="2dp">

                    <TextView
                        style="@style/TextViewLabel"
                        android:paddingLeft="8dp"
                        android:paddingTop="4dp"
                        android:text="@string/workout" />

                    <EditText
                        android:id="@+id/frg_insert_workout__et__name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/hint_workout_name"
                        android:inputType="textCapSentences|textMultiLine"
                        android:maxLength="250"
                        android:minHeight="48dp"
                        android:paddingBottom="8dp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:paddingTop="24dp"
                        android:textColor="@color/md_blue_grey_500"
                        android:textColorHint="@color/md_blue_grey_200"
                        android:textSize="18sp" />

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="100dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="8dp"
                    app:cardCornerRadius="2dp">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/recycler"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@android:color/transparent"
                            android:clipToPadding="false"
                            android:nestedScrollingEnabled="false"
                            android:paddingTop="20dp"
                            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

                        <TextView
                            style="@style/TextViewLabel"
                            android:paddingLeft="8dp"
                            android:paddingTop="4dp"
                            android:text="@string/tab_exercises" />

                        <include layout="@layout/ept_view" />

                    </FrameLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

    </LinearLayout>

    <include layout="@layout/fab" />

</FrameLayout>