<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_background"
    android:orientation="vertical">

    <include layout="@layout/appbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="8dp">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="2dp">

                <TextView
                    style="@style/TextViewLabel"
                    android:paddingLeft="8dp"
                    android:paddingTop="4dp"
                    android:text="@string/name"/>

                <EditText
                    android:id="@+id/frg_insert_exercise__et__name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="Push-ups, squats, kettlebell swing... "
                    android:inputType="textCapSentences|textMultiLine"
                    android:maxLength="250"
                    android:minHeight="48dp"
                    android:paddingBottom="8dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingTop="24dp"
                    android:textColor="@color/md_blue_grey_500"
                    android:textColorHint="@color/md_blue_grey_200"
                    android:textSize="18sp"/>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="2dp">

                <TextView
                    style="@style/TextViewLabel"
                    android:paddingLeft="8dp"
                    android:paddingTop="4dp"
                    android:text="@string/weight"/>

                <EditText
                    android:id="@+id/frg_insert_exercise__et__weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="10KG, 15KG, 20KG... "
                    android:inputType="numberDecimal"
                    android:maxLength="250"
                    android:minHeight="48dp"
                    android:paddingBottom="8dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingTop="24dp"
                    android:textColor="@color/md_blue_grey_500"
                    android:textColorHint="@color/md_blue_grey_200"
                    android:textSize="18sp"/>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="2dp">

                <TextView
                    style="@style/TextViewLabel"
                    android:paddingLeft="8dp"
                    android:paddingTop="4dp"
                    android:text="@string/sets"/>

                <EditText
                    android:id="@+id/frg_insert_exercise__et__sets"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="3, 4... "
                    android:inputType="number"
                    android:maxLength="250"
                    android:minHeight="48dp"
                    android:paddingBottom="8dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingTop="24dp"
                    android:textColor="@color/md_blue_grey_500"
                    android:textColorHint="@color/md_blue_grey_200"
                    android:textSize="18sp"/>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="2dp">

                <TextView
                    style="@style/TextViewLabel"
                    android:paddingLeft="8dp"
                    android:paddingTop="4dp"
                    android:text="@string/reps"/>

                <EditText
                    android:id="@+id/frg_insert_exercise__et__reps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="8, 12, 15..."
                    android:inputType="number"
                    android:maxLength="250"
                    android:minHeight="48dp"
                    android:paddingBottom="8dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingTop="24dp"
                    android:textColor="@color/md_blue_grey_500"
                    android:textColorHint="@color/md_blue_grey_200"
                    android:textSize="18sp"/>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="2dp">

                <TextView
                    style="@style/TextViewLabel"
                    android:paddingLeft="8dp"
                    android:paddingTop="4dp"
                    android:text="Notes"/>

                <EditText
                    android:id="@+id/frg_insert_exercise__et__notes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="Add some additional info here"
                    android:inputType="textCapSentences|textMultiLine"
                    android:minHeight="48dp"
                    android:paddingBottom="8dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingTop="24dp"
                    android:textColor="@color/md_blue_grey_500"
                    android:textColorHint="@color/md_blue_grey_200"
                    android:textSize="18sp"/>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>